fix(docs): highlighted code block making the page overflow

--- a/docs/assets/styles/global.css
+++ b/docs/assets/styles/global.css
@@ -140,10 +140,14 @@ ul code {
   max-width: 900px;
 }
 
-.example-code .highlight pre {
+.highlight pre {
   border-radius: 8px;
-  overflow: auto;
   padding: 16px 8px;
+  max-width: 100%;
+  overflow: auto;
+}
+
+.example-code .highlight pre {
   margin: 0px;
 }
 
